# agile-wargame-simulator

./: .env.example  .gitignore  CLAUDE_CODE_MASTER_BRIEFING.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  cal3_dump.txt  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
migrations/: env.py
output/5cdc3c50-2049-4acd-8411-ba8527dac2ee/: sprint_01.csv  sprint_01.json  sprint_02.csv  sprint_02.json  sprint_03.csv  sprint_03.json  sprint_04.csv  sprint_04.json  sprint_05.csv  sprint_05.json  sprint_06.csv  sprint_06.json  sprint_07.csv  sprint_07.json  sprint_08.csv  sprint_08.json
output/726a8523-d17b-47df-aa90-46fcbc002683/: sprint_01.csv  sprint_01.json  sprint_02.csv  sprint_02.json
seeds/etp/: agent_profiles.json  backlog.json  constraints.json
tests/: conftest.py  test_e2e_mock.py  test_friction.py  test_god_agent.py  test_grounding.py  test_providers.py
wargame/: __main__.py  cli.py  exceptions.py
wargame/agents/: base.py  cloud_engineer.py  developer.py  product_owner.py  qa_engineer.py  scrum_master.py  security_architect.py  software_architect.py  tech_lead.py
wargame/core/: context.py  events.py  friction.py  orchestrator.py  state.py  turn.py
wargame/dashboard/: app.py  sim_registry.py
wargame/god_agent/: exporter.py  god_agent.py  mapper.py  reducer.py
wargame/memory/: interaction_log.py  vector_store.py
wargame/models/: agent_response.py  events.py  sprint_report.py  world_state.py
wargame/prompts/: renderer.py
wargame/providers/: base.py  deepseek.py  factory.py  mock.py  (+2 more)
(+16 files in other folders)
